# testanalyzer

./: Cargo.toml  README.md  example.txt
.github/workflows/: releases.yml
src/: analysis.rs  main.rs  matcher.rs
