[package]
name = "testanalyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.33"
clap = { version = "4", features = ["derive"] }
dirs = "5"
figment = { version = "0.10", features = ["json", "yaml", "toml", "env"] }
regex = "1.10.3"
serde = { version = "1", features = ["derive"] }
tabled = "0.15.0"
